<?xml version="1.0"?>
<package format="2">
  <name>libmodbus</name>
  <version>3.1.10</version>
  <description>A groovy modbus library</description>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license>LGPLv3</license>
  <url type="repository">https://github.com/dfautomation/libmodbus</url>
  <url type="bugtracker">https://github.com/dfautomation/libmodbus/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
</package>
